@@ -6,6 +6,7 @@ Changes for 1.7.0
 
 Changes for 1.6.2
 
+ - [DEV-260] support of macro TRIGGER.NSEVERITY (Alexei)
  - [DEV-255] added support of #num for function last() (Sasha)
  - [ZBX-593] fixed stop escalations if action is disabled (Sasha)
  - [ZBX-592] fixed incorrect {TRIGGER.STATUS} value in recovery message (Sasha)
